# 079-finbert-sentiment

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
rust/: Cargo.toml
rust/examples/: trading_example.rs
rust/src/: lib.rs
