[package]
name = "finbert_sentiment"
version = "0.1.0"
edition = "2021"
description = "FinBERT-inspired financial sentiment analysis for trading"

[dependencies]
ndarray = "0.15"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"

[[example]]
name = "trading_example"
path = "examples/trading_example.rs"
